--- a/termini.html
+++ b/termini.html
@@ -264,18 +264,18 @@
 
 
 
-       footer {
-           background-color: var(--primary);
-           color: #fff;
-           text-align: center;
-           padding: 0.3rem 0;
-           margin-top: 3rem;
-       }
+      footer {
+            background-color: var(--primary);
+            color: #fff;
+            text-align: center;
+            padding: 1.8rem 0;
+        }
 
-       footer a {
-           color: #fff;
-           border-bottom: 1px solid transparent;
-       }
+
+         footer a {
+            color: #fff;
+            text-decoration: underline;
+        }
 
        footer a:hover {
            border-bottom-color: #fff;
