--- a/termini.html
+++ b/termini.html
@@ -391,14 +391,7 @@ footer i {
         </div>
     </div>
 
-<div class="nav-icons">
-    <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro">
-        <img src="left.svg" alt="Indietro" style="height: 22px; width: 22px;">
-    </a>
-    <a href="https://www.bibliotechediroma.it/opac/.do" title="Home">
-        <img src="home.svg" alt="Home" style="height: 22px; width: 22px;">
-    </a>
-</div>
+
    
   <header>
     <div class="container-header">
@@ -410,6 +403,19 @@ footer i {
         </a>
     </div>
   </header>
+
+
+    <div class="content-wrapper">
+        <div class="nav-icons">
+            <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro">
+                <img src="left.svg" alt="Indietro" style="height: 22px; width: 22px;">
+            </a>
+            <a href="https://www.bibliotechediroma.it/opac/.do" title="Home">
+                <img src="home.svg" alt="Home" style="height: 22px; width: 22px;">
+            </a>
+        </div>
+
+   
 
   <div class="content-wrapper">
         <div class="nav-icons">
