--- a/termini.html
+++ b/termini.html
@@ -128,6 +128,8 @@
     align-items: center;
     gap: 3rem;
     padding-top: 20px;
+    visibility: visible;
+    opacity: 1;
 }
 
 @media (max-width: 1400px) {
@@ -151,26 +153,22 @@
 @media (max-width: 768px) {
     .nav-icons {
         position: relative;
-        top: 0;
         left: 0;
+        top: 0;
         transform: none;
         justify-content: flex-start;
-        padding: 0.5rem 0;
     }
 }
 
 
 
       
-       .nav-icons a {
-           color: #970a2c;
-           font-size: 1.25rem;
-           text-decoration: none;
-           transition: transform 0.3s ease;
-           display: flex;
-           align-items: center;
-           height: 100%;
-       }
+    .nav-icons a {
+    display: flex;
+    align-items: center;
+    visibility: visible;
+    opacity: 1;
+}
 
        .nav-icons a:hover {
            transform: scale(1.1);
