--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
         
 :root {
-    --primary: #970a2c;
-    --secondary: #6b1c32;  /* Rosso più scuro */
-    --accent: #8c1c13;     /* Bordeaux */
+    --primary: #6b0a20;    /* Slightly darker red */
+    --secondary: #540f26;  /* Even darker red */
+    --accent: #700f0a;     /* Darker bordeaux */
 }
+
+        
 
 /* Sostituisci il pulsante di invio con il colore amaranto dell'intestazione */
  button[type="submit"] {
