--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ footer i {
        
 
             <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r">
-                Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con * sono obbligatori
+                Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con * sono obbligatori. E' raccomandato compilare anche il campo ISBN per garantire una più accurata identificazione dei volumi.
             </div>
             
             <form id="donationForm" novalidate>
