--- a/termini.html
+++ b/termini.html
@@ -496,9 +496,10 @@ footer i {
 
 
 <h2>Informativa sulla Privacy</h2>
-<p>
+<p style="font-size: 0.9rem; color: #555; margin-top: 0; border-top: 1px solid #ddd; padding-top: 1rem;">
     I dati personali raccolti attraverso il modulo di donazione saranno trattati esclusivamente per la gestione della donazione di libri, nel rispetto del Regolamento UE 2016/679 (GDPR). I dati non saranno condivisi con terze parti e saranno conservati solo per il tempo necessario al completamento della donazione.
 </p>
+
 
 
                
