--- a/raccolta.html
+++ b/raccolta.html
@@ -332,13 +332,16 @@
 
         
      <div class="flex items-center mb-4" style="color: #970a2c;">
-    <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
+    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+        <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
+    </a>
     <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
        class="text-xl hover:underline" 
         style="color: #970a2c; font-size: 1rem;">
         Biblioteca Elsa Morante
     </a>
 </div>
+
 
         
         <h1 class="text-3xl font-bold text-left" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
