--- a/raccolta.html
+++ b/raccolta.html
@@ -331,8 +331,8 @@
 
 
         
-     <div class="flex items-center mb-4" style="color: #970a2c;">
-    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+    <div class="flex items-center mb-4" style="color: #970a2c;">
+    <a href="#" onclick="SebinaYou.Maps.popup('mappa-re2','RMBO2',20); SebinaYou.Maps.scrollToMap();">
         <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
     </a>
     <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
@@ -341,6 +341,7 @@
         Biblioteca Elsa Morante
     </a>
 </div>
+
 
 
         
