--- a/raccolta.html
+++ b/raccolta.html
@@ -331,14 +331,18 @@
 
 
         
-     <div class="flex items-center mb-4" style="color: #970a2c;">
-    <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
-    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-       class="text-xl hover:underline" 
-        style="color: #970a2c; font-size: 1rem;">
-        Biblioteca Elsa Morante
-    </a>
-</div>
+      <div class="flex items-center mb-4" style="color: #970a2c;">
+        <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
+           target="_blank" 
+           title="Visualizza la posizione sulla mappa">
+            <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px;">
+        </a>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+           class="text-xl hover:underline" 
+           style="color: #970a2c; font-size: 1rem;">
+            Biblioteca Elsa Morante
+        </a>
+    </div>
 
         
         <h1 class="text-3xl font-bold text-left" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
