--- a/index.html
+++ b/index.html
@@ -342,7 +342,11 @@ footer i {
 <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md mt-2">
     <div class="flex flex-col mb-10 text-left space-y-4 px-4">
         <div class="flex items-center gap-2 mb-2">
-            <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
+            <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
+               target="_blank" 
+               title="Visualizza la posizione sulla mappa">
+                <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
+            </a>
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
                class="text-base text-red-700 hover:underline hover:text-red-900 transition-colors">
                 Biblioteca Elsa Morante
@@ -352,8 +356,9 @@ footer i {
             Donazione di libri
         </h1>
     </div>
+</div>
 
-
+    
 
        
 
