--- a/index.html
+++ b/index.html
@@ -743,28 +743,52 @@ document.addEventListener('DOMContentLoaded', () => {
     // Existing code for creating book entry and validation
     let bookCount = 0;
 
-    function createBookSearchContainer() {
-        const searchContainer = document.createElement('div');
-        searchContainer.className = 'book-search-container mb-5';
-        searchContainer.innerHTML = `
-            <div class="flex items-center gap-2 mb-3">
-                <input 
-                    type="text" 
-                    id="bookSearchInput"
-                    placeholder="Cerca un libro per titolo o ISBN"
-                    class="w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base"
-                />
-                <button 
-                    id="bookSearchButton"
-                    class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition-colors"
-                >
-                    <i class="fas fa-search"></i>
-                </button>
+
+
+	
+
+function createBookSearchContainer() {
+    const searchContainer = document.createElement('div');
+    searchContainer.className = 'book-search-container mb-5';
+    searchContainer.innerHTML = `
+        <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-4 rounded-r">
+            <div class="flex items-start gap-2">
+                <i class="fas fa-search text-blue-500 mt-1"></i>
+                <div>
+                    <h4 class="font-medium text-blue-800 mb-1">Ricerca Rapida Libri</h4>
+                    <p class="text-sm text-blue-700">
+                        Inserisci il titolo o l'ISBN del libro per cercare e compilare automaticamente i dettagli. Puoi anche inserire i dati manualmente nei campi sottostanti.
+                    </p>
+                </div>
             </div>
-            <div id="bookSearchResults" class="book-results border rounded"></div>
-        `;
-        return searchContainer;
-    }
+        </div>
+        <div class="flex items-center gap-2 mb-3">
+            <input 
+                type="text" 
+                id="bookSearchInput"
+                placeholder="Cerca un libro per titolo o ISBN..."
+                class="w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base"
+                aria-label="Cerca libro"
+            />
+            <button 
+                id="bookSearchButton"
+                class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors flex items-center gap-2"
+                aria-label="Avvia ricerca"
+            >
+                <i class="fas fa-search"></i>
+                <span class="hidden sm:inline">Cerca</span>
+            </button>
+        </div>
+        <div id="bookSearchResults" class="book-results border rounded"></div>
+    `;
+    return searchContainer;
+}
+
+
+
+
+
+	
 
     // Debounce function to prevent too many API calls
     function debounce(func, delay) {
