--- a/index.html
+++ b/index.html
@@ -823,6 +823,12 @@ function setupFieldValidation(bookDiv) {
 }
 
 
+setupIndividualSearch()
+searchBooks()
+fillBookDetails()
+setupFieldValidation()
+
+
 
 	    
 
