--- a/index.html
+++ b/index.html
@@ -466,7 +466,20 @@ footer i {
 
                 <h3 class="section-header">Libri da donare</h3>
                 <div id="bookList"></div>
-                
+
+
+<div class="mb-5 bg-gray-50 p-4 rounded">
+    <label for="notes" class="block mb-1 text-slate-700 font-medium text-sm">Note aggiuntive:</label>
+    <textarea 
+        id="notes" 
+        name="notes" 
+        rows="3" 
+        class="w-full px-3 py-2 border-2 border-gray-300 rounded focus:border-blue-500 focus:outline-none text-base resize-none bg-white"
+        placeholder="Aggiungi eventuali note o commenti sulla donazione..."></textarea>
+</div>
+
+
+		    
                 <div class="bg-gray-50 p-4 rounded mb-5">
                     <label class="flex items-start gap-3">
                         <input type="checkbox" id="accept" name="accept" required class="w-5 h-5 mt-1">
