--- a/index.html
+++ b/index.html
@@ -1071,20 +1071,22 @@ function resetBookFields(button) {
     showLoadingOverlay(); // Mostra subito il loading overlay
 
     try {
-        const response = await emailjs.send(
-            'service_yepi8uu',
-            'template_s1jmd7r', 
-            {
-                to_email: 'bibliotecamorante@gmail.com',
-                from_name: `${nome} ${cognome}`,
-                from_email: email,
-                reply_to: email,
-                tessera: tessera || 'Non specificata',
-                telefono: telefono || 'Non specificato',
-                books: formattedBooks
-            },
-            'z6OeY42qSulJ-8EcS'
-        );
+  // Update the emailjs.send portion of the submit event listener
+const response = await emailjs.send(
+    'service_yepi8uu',
+    'template_s1jmd7r', 
+    {
+        to_email: 'bibliotecamorante@gmail.com',
+        from_name: `${nome} ${cognome}`,
+        from_email: email,
+        reply_to: email,
+        tessera: tessera || 'Non specificata',
+        telefono: telefono || 'Non specificato',
+        books: formattedBooks,
+        notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
+    },
+    'z6OeY42qSulJ-8EcS'
+);
 
         // Rimuovi il loading overlay prima di mostrare il popup di successo
         removeLoadingOverlay();
