--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@ footer i {
     <script>
         // Initialize EmailJS
         (function() {
-            emailjs.init("z6OeY42qSulJ-8EcS");
-        })();
+        emailjs.init(process.env.EMAILJS_PUBLIC_KEY);
+    })();
 
 
 
@@ -1208,23 +1208,24 @@ function resetBookFields(button) {
 
     showLoadingOverlay(); // Mostra subito il loading overlay
 
+  
+		
     try {
-  // Update the emailjs.send portion of the submit event listener
-const response = await emailjs.send(
-    'service_yepi8uu',
-    'template_s1jmd7r', 
-    {
-        to_email: 'bibliotecamorante@gmail.com',
-        from_name: `${nome} ${cognome}`,
-        from_email: email,
-        reply_to: email,
-        tessera: tessera || 'Non specificata',
-        telefono: telefono || 'Non specificato',
-        books: formattedBooks,
-        notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
-    },
-    'z6OeY42qSulJ-8EcS'
-);
+    // Update the emailjs.send portion of the submit event listener
+    const response = await emailjs.send(
+        process.env.EMAILJS_SERVICE_ID,
+        process.env.EMAILJS_TEMPLATE_ID, 
+        {
+            to_email: 'bibliotecamorante@gmail.com',
+            from_name: `${nome} ${cognome}`,
+            from_email: email,
+            reply_to: email,
+            tessera: tessera || 'Non specificata',
+            telefono: telefono || 'Non specificato',
+            books: formattedBooks,
+            notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
+        }
+    );
 
         // Rimuovi il loading overlay prima di mostrare il popup di successo
         removeLoadingOverlay();
