--- a/index.html
+++ b/index.html
@@ -575,6 +575,31 @@ footer i {
     })();
 
 
+// Funzione per inviare email
+async function sendEmail(formData) {
+    try {
+        const response = await emailjs.send(
+            process.env.EMAILJS_SERVICE_ID,
+            process.env.EMAILJS_TEMPLATE_ID,
+            {
+                to_email: process.env.RECIPIENT_EMAIL,
+                ...formData
+            },
+            process.env.EMAILJS_PUBLIC_KEY
+        );
+        return response;
+    } catch (error) {
+        console.error('Errore nell\'invio dell\'email:', error);
+        throw error;
+    }
+}
+
+export { sendEmail };
+
+
+
+
+	    
 
         
 // Prima aggiungi questa funzione accanto alle altre funzioni di utility (dopo showGlobalErrorPopup)
