--- a/index.html
+++ b/index.html
@@ -571,35 +571,10 @@ footer i {
     <script>
         // Initialize EmailJS
         (function() {
-        emailjs.init(process.env.EMAILJS_PUBLIC_KEY);
-    })();
+            emailjs.init("z6OeY42qSulJ-8EcS");
+        })();
 
 
-// Funzione per inviare email
-async function sendEmail(formData) {
-    try {
-        const response = await emailjs.send(
-            process.env.EMAILJS_SERVICE_ID,
-            process.env.EMAILJS_TEMPLATE_ID,
-            {
-                to_email: process.env.RECIPIENT_EMAIL,
-                ...formData
-            },
-            process.env.EMAILJS_PUBLIC_KEY
-        );
-        return response;
-    } catch (error) {
-        console.error('Errore nell\'invio dell\'email:', error);
-        throw error;
-    }
-}
-
-export { sendEmail };
-
-
-
-
-	    
 
         
 // Prima aggiungi questa funzione accanto alle altre funzioni di utility (dopo showGlobalErrorPopup)
@@ -1233,15 +1208,13 @@ function resetBookFields(button) {
 
     showLoadingOverlay(); // Mostra subito il loading overlay
 
-  
-		
     try {
-    // Update the emailjs.send portion of the submit event listener
-   const response = await emailjs.send(
-    process.env.EMAILJS_SERVICE_ID,
-    process.env.EMAILJS_TEMPLATE_ID, 
+  // Update the emailjs.send portion of the submit event listener
+const response = await emailjs.send(
+    'service_yepi8uu',
+    'template_s1jmd7r', 
     {
-        to_email: process.env.RECIPIENT_EMAIL,
+        to_email: 'bibliotecamorante@gmail.com',
         from_name: `${nome} ${cognome}`,
         from_email: email,
         reply_to: email,
@@ -1250,7 +1223,7 @@ function resetBookFields(button) {
         books: formattedBooks,
         notes: document.getElementById('notes').value.trim() || 'Nessuna nota aggiuntiva'
     },
-    process.env.EMAILJS_PUBLIC_KEY
+    'z6OeY42qSulJ-8EcS'
 );
 
         // Rimuovi il loading overlay prima di mostrare il popup di successo
