--- a/index.html
+++ b/index.html
@@ -568,7 +568,8 @@ footer i {
 
     
 
-<!-- Aggiungi questo nella sezione head, dopo gli altri script -->
+<!-- Aggiungi questo prima dello script config.js -->
+<script src="env.js"></script>
 <script type="module">
     import config from './config.js';
     
