--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ footer i {
                        title="Visualizza la posizione sulla mappa">
                         <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
                     </a>
-                    <a href="https://www.bibliotechedirama.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+                    <a href="https://www.bibliotechedirama.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank"
                        class="text-base text-red-700 hover:underline hover:text-red-900 transition-colors">
                         Biblioteca Elsa Morante
                     </a>
