--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@ footer i {
         <a href="https://www.bibliotechediroma.it/opac/.do">
             <img src="logobianco.png" alt="Logo Biblioteche di Roma" style="height: 70px; max-width: 100%;">
         </a>
-        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
-        Biblioteca Elsa Morante
-    </a>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+            <img src="logomorante.png" alt="Logo Biblioteca Morante" style="height: 180px; max-width: 100%;">
+        </a>
     </div>
 </header>
 
@@ -475,8 +475,9 @@ footer i {
                         <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
                     </a>
                     <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
-        Biblioteca Elsa Morante
-    </a>
+                       Biblioteca Elsa Morante
+                    </a>
+
                 </div>
                 <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-left">
                     Donazione di libri
