--- a/raccolta.html
+++ b/raccolta.html
@@ -402,7 +402,7 @@
     
 
 
-    <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
+   <footer class="bg-[#970a2c] text-white mt-16 py-8"> <!-- Increased padding -->
     <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
         <div class="mb-4 md:mb-0">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" rel="noopener noreferrer">
@@ -428,7 +428,14 @@
                     <i class="fas fa-clock w-4"></i>
                     <span class="flex flex-col">
                         <span>Lunedì-Venerdì 09:00-18:30</span>
-                        <span>Sabato 09:00-13:00</span>
+                        <span>
+                            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="underline hover:text-gray-300">
+                                Sabato 09:00-13:00
+                            </a>
+                        </span>
                     </span>
                 </div>
             </div>
