--- a/raccolta.html
+++ b/raccolta.html
@@ -429,7 +429,7 @@
                     <span class="flex flex-col">
                         <span>Lunedì-Venerdì 09:00-18:30</span>
                         <span>
-                            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+                            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
                                target="_blank" 
                                rel="noopener noreferrer"
                                class="underline hover:text-gray-300">
