--- a/raccolta.html
+++ b/raccolta.html
@@ -432,7 +432,7 @@
                             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
                                target="_blank" 
                                rel="noopener noreferrer"
-                               class="underline hover:text-gray-300">
+                               class="hover:underline">
                                 Sabato 09:00-13:00
                             </a>
                         </span>
