--- a/raccolta.html
+++ b/raccolta.html
@@ -429,12 +429,21 @@
                     <span class="flex flex-col">
                         <span>Lunedì-Venerdì 09:00-18:30</span>
                         <span>
-                            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
-                               target="_blank" 
-                               rel="noopener noreferrer"
-                               class="hover:underline">
-                                Sabato 09:00-13:00
-                            </a>
+
+
+                            
+                         <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   onclick="setTimeout(function() { window.location.href = this.href; }, 100); return false;"
+   class="hover:underline">
+   Sabato 09:00-13:00
+</a>
+
+
+
+
+                            
                         </span>
                     </span>
                 </div>
