--- a/raccolta.html
+++ b/raccolta.html
@@ -431,11 +431,11 @@
                         <span>
 
 
-                            
-                         <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=%7C%20%C2%A9%20OpenStreetMap%20contributors-,Orario,-Altri%20orari" 
+
+
+    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario" 
    target="_blank" 
    rel="noopener noreferrer"
-   onclick="setTimeout(function() { window.location.href = this.href; }, 100); return false;"
    class="hover:underline">
    Sabato 09:00-13:00
 </a>
