--- a/raccolta.html
+++ b/raccolta.html
@@ -433,7 +433,7 @@
 
 
 
-    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario" 
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Sabato%2009%3A00%2D13%3A00" 
    target="_blank" 
    rel="noopener noreferrer"
    class="hover:underline">
