--- a/raccolta.html
+++ b/raccolta.html
@@ -433,7 +433,7 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=sabato,09%3A00%20-%2013%3A00" 
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario%20modificato%20per%20le%20festività%20natalizie" 
    target="_blank" 
    rel="noopener noreferrer"
    class="hover:underline">
