--- a/raccolta.html
+++ b/raccolta.html
@@ -433,11 +433,8 @@
 
 
 
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario%20modificato%20per%20le%20festività%20natalizie" 
-   target="_blank" 
-   rel="noopener noreferrer"
-   class="hover:underline">
-   Sabato 09:00-13:00
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" target="_blank" rel="noopener noreferrer" class="hover:underline">
+  Sabato 09:00-13:00
 </a>
 
 
